chore: openapi.yaml 스펙 수정
